# storage/api-docs/api-docs.json
@@ -59,6 +59,27 @@
                     }
                 }
             }
+        },
+        "/api/v1/programming-languages": {
+            "get": {
+                "tags": [
+                    "ProgrammingLangauges"
+                ],
+                "summary": "Return list of programming languages used by developer",
+                "operationId": "c8d62df66bfec6e718eecb0196eaf70e",
+                "responses": {
+                    "200": {
+                        "description": "List of programming languages used by developer",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ProgrammingLanguagesSchema"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -147,6 +168,57 @@
                                     "description": "Suggested color",
                                     "type": "string",
                                     "example": "#FFFFFF"
+                                },
+                                "created_at": {
+                                    "description": "Date of creation",
+                                    "type": "string",
+                                    "example": "2023-01-29"
+                                },
+                                "updated_at": {
+                                    "description": "Date of update",
+                                    "type": "string",
+                                    "example": "2023-01-29"
+                                },
+                                "deleted_at": {
+                                    "description": "Date of deletion",
+                                    "type": "string",
+                                    "example": "2023-01-29"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                },
+                "type": "object"
+            },
+            "ProgrammingLanguagesSchema": {
+                "title": "Programming Languages",
+                "description": "Programming Languages model",
+                "properties": {
+                    "data": {
+                        "description": "List of programming languages",
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "id": {
+                                    "description": "ID of the language",
+                                    "type": "number",
+                                    "example": 1
+                                },
+                                "name": {
+                                    "description": "Name of the language",
+                                    "type": "string",
+                                    "example": "PHP"
+                                },
+                                "view_order": {
+                                    "description": "Suggested order of visualization",
+                                    "type": "number",
+                                    "example": "1"
+                                },
+                                "knowledge_percentage": {
+                                    "description": "Percentage of knowledge",
+                                    "type": "number",
+                                    "example": "95"
                                 },
                                 "created_at": {
                                     "description": "Date of creation",
